--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
@@ -22,6 +22,11 @@
     "tailwindcss": "^3"
   },
   "next": {
-    "pageExtensions": ["js", "jsx", "ts", "tsx"]
+    "pageExtensions": [
+      "js",
+      "jsx",
+      "ts",
+      "tsx"
+    ]
   }
 }
